ASC Prod BAckup/ASC Prod/force-app/main/default/objects/WebCart/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <label>Order Notes</label>
    <length>80</length>
    <type>Text</type>
</CustomField>