ASC Prod BAckup/ASC Prod/force-app/main/default/objects/WebCart/fields/PaymentOptions__c.field-meta.xml
<CustomField>
    <fullName>PaymentOptions__c</fullName>
    <label>Payment Options</label>
    <length>25</length>
    <type>Text</type>
</CustomField>