ASC Prod BAckup/ASC Prod/force-app/main/default/objects/WebCart/listViews/All_WebCarts.listView-meta.xml
<ListView>
    <fullName>All_WebCarts</fullName>
    <columns>Name</columns>
    <columns>CreatedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>Status</columns>
    <columns>Owner</columns>
    <columns>Account</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Carts</label>
</ListView>